Update README with project details and instructions
Add detailed project description, features, algorithms, and usage instructions.